magi/static/less/main.less
@import "../bower/bootstrap/less/variables.less";
@import "../css/flaticon.css?3";
@import "simple-sidebar.less";
@import "mixins/a.less";
@import "mixins/navbar-variant.less";
@import "mixins/panel.less";
@import "mixins/nav-tabs.less";
@import "mixins/buttons.less";
@import "mixins/well.less";
@import "mixins/ribbon.less";

@transparent: rgba(0, 0, 0, 0);

@GoldColor: #c98910;
@SilverColor: #a8a8a8;
@BronzeColor: #965a38;

@transition: 0.2s ease;

[class^="flaticon-"]:before,
[class*=" flaticon-"]:before,
[class^="flaticon-"]:after,
[class*=" flaticon-"]:after {
    margin-left: 0;
    font-size: inherit;
}

.grecaptcha-badge { visibility: hidden; }

.popover {
    font-family: inherit;
    width: 300px;
    max-width: 100%;
    .flaticon-loading {
        display: block;
        text-align: center;
        font-size: 30px;
    }
    .top-item, .top-item + br {
        display: none;
    }
    .about-table {
        td, th {
            padding: 4px;
        }
        tr:first-child {
            td, th {
                border-top: 0;
            }
        }
        td:first-child {
            width: auto;
            [class^="flaticon-"] {
                line-height: 21px;
                font-size: 21px;
            }
            img {
                height: 21px;
            }
        }
        .btn {
            padding: 5px 10px;
            font-size: 12px;
            line-height: 1.5;
            border-radius: 3px;
            img {
                height: 12px;
            }
        }
        .long-text-title {
            padding: 0;
        }
    }
}

.simple-shadow(@color) {
    text-shadow: 0 0 0.2em @color, 0 0 0.2em @color, 0 0 0.2em @color, 0 0 0.2em @color, 0 0 0.2em @color, 0 0 0.2em @color, 0 0 0.2em @color;
    code {
        text-shadow: none;
    }
}

.navbar-main img.logo {
    max-height: 40px;
    margin: -10px 0;
}

.navbar-nav .open .dropdown-menu > li > a.other-site {
    display: inline-block;
    padding: 3px;
    margin: 0;
    img {
        width: 40px;
        border-radius: 15%;
    }
}

#navBarIDDropDownmore + .dropdown-menu .dropdown-header {
    white-space: normal;
}

.navbar .dropdown-menu >li>a, body.sitemap a.list-group-item {
    img[src*="/static/img/links/"] {
        display: inline-block;
        box-sizing: content-box;
        padding: 3px;
        margin: -3px 0 -3px -4px;
        background: #333;
        border-radius: 5px;
    }
}

.navbar {
    .dropdown-menu {
        font-size: inherit;
        height: auto;
        max-height: 80vh;
        overflow-x: hidden;
        &>li>a {
            line-height: 2em;
        }
        .dropdown-header.large {
            &:first-child {
                margin-top: 5px;
            }
            padding-right: 80px;
            font-size: 1.1em;
            font-weight: bold;
            background: #eee;
            img, [class^="flaticon"] {
                text-align: center;
                font-size: 28px;
                width: 40px;
                height: 40px;
                margin: -8px 0;
                margin-right: -60px;
                float: right;
            }
        }
    }
}

.link_larger_image {
    height: 36px;
    margin: -10px -8px;
}

@media (min-width: 768px) {
    .navbar [data-link-name^="staff-header-"] {
        background: #eee;
        font-size: 1em;
        padding-right: 80px;
        img {
            width: 40px;
            height: 40px;
            margin: -8px 0;
            margin-right: -60px;
            float: right;
        }
    }
}
@media (max-width: 768px) {
    .dropdown-header {
        color: rgba(255, 255, 255, 0.6);
    }
}

.col-xs-special-5, .col-sm-special-5, .col-md-special-5, .col-lg-special-5,
.col-xs-special-7, .col-sm-special-7, .col-md-special-7, .col-lg-special-7,
.col-xs-special-8, .col-sm-special-8, .col-md-special-8, .col-lg-special-8,
.col-xs-special-9, .col-sm-special-9, .col-md-special-9, .col-lg-special-9 {
    position: relative;
    min-height: 1px;
    padding-right: 15px;
    padding-left: 15px;
}

.col-xs-special-9 {
    float: left;
    width: 11.11%;
}

.col-xs-special-8 {
    float: left;
    width: 12.5%;
}

.col-xs-special-7 {
    float: left;
    width: 14.2%;
}

.col-xs-special-5 {
    float: left;
    width: 20%;
}

@media (max-width: 768px) {
    .col-xs-special-5, .col-xs-special-7, .col-xs-special-8, .col-xs-special-9 {
        padding-right: 5px;
        padding-left: 5px;
    }
}

@media (min-width: 768px) {
    .col-sm-special-5 {
        float: left;
        width: 20%;
    }
    .col-sm-special-7 {
        float: left;
        width: 14.2%;
    }
    .col-sm-special-8 {
        float: left;
        width: 12.5%;
    }
    .col-sm-special-9 {
        float: left;
        width: 11.11%;
    }
}
@media (min-width: 992px) {
    .col-md-special-5 {
        float: left;
        width: 20%;
    }
    .col-md-special-7 {
        float: left;
        width: 14.2%;
    }
    .col-md-special-8 {
        float: left;
        width: 12.5%;
    }
    .col-md-special-9 {
        float: left;
        width: 11.11%;
    }
}
@media (min-width: 1200px) {
    .col-lg-special-5 {
        float: left;
        width: 20%;
    }
    .col-lg-special-7 {
        float: left;
        width: 14.2%;
    }
    .col-lg-special-8 {
        float: left;
        width: 12.5%;
    }
    .col-lg-special-9 {
        float: left;
        width: 11.11%;
    }
}

.col-xs-offset-special {
    margin: 0!important;
}

@media (max-width: @screen-xs-max) {
    .col-sm-offset-special {
        margin: 0!important;
    }
}

@media (max-width: @screen-sm-max) {
    .col-md-offset-special {
        margin: 0!important;
    }
}

@media (max-width: @screen-md-max) {
    .col-lg-offset-special {
        margin: 0!important;
    }
}


// Remove padding on xs items or they wont be visible at all
@media (max-width: 768px) {
    .col-xs-2 [data-item] {
        padding-left: 1px;
        padding-right: 1px;
    }
}
/* ... */

